# eyesim

./: LICENSE  README.md  pyproject.toml
examples/: simulate.py  visualize_pipeline.py
eyesim/: __init__.py  cnn.py  optics.py  optimize.py  photorefraction.py  predistort.py
scripts/: evaluate.py  generate_dataset.py  train.py
tests/: test_optics.py  test_optimize.py  test_predistort.py
